modal changes and table style changes

--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -159,25 +159,28 @@
                         <div class="upcoming-orders">
                             <h3>Upcoming Orders</h3>
                             <div class="order-wrap">
-                                <div
-                                    class="order col-sm-12 col-md-12 col-lg-12 col-xs-12"
-                                >
-                                    <div
-                                        class="top col-sm-12 col-md-12 col-lg-12 col-xs-12"
-                                    >
-                                        <div
-                                            class="f-l dish-name col-sm-3 col-md-3 col-lg-3 col-xs-3"
-                                        >
-                                            North Indian Veg
+                                <div class="order">
+                                    <div class="header top">
+                                        <div class="f-l dish-name">
+                                            Dish Name
                                         </div>
-                                        <div
-                                            class="f-l quantity col-sm-3 col-md-3 col-lg-3 col-xs-3"
-                                        >
-                                            20 Meals
+                                        <div class="f-l quantity">Quantity</div>
+                                        <div class="f-l action-wrap">
+                                            Actions
                                         </div>
-                                        <div
-                                            class="f-l action-wrap col-sm-5 col-md-5 col-lg-5 col-xs-6"
-                                        >
+                                        <div class="clr"></div>
+                                    </div>
+                                </div>
+                                <div class="order">
+                                    <div class="top">
+                                        <div class="f-l dish-name">
+                                            <p>North Indian Veg</p>
+                                            <p>20/3/2021 - Lunch</p>
+                                        </div>
+                                        <div class="f-l quantity">
+                                            <p>20 Meals</p>
+                                        </div>
+                                        <div class="f-l action-wrap">
                                             <button class="small-button">
                                                 Edit
                                             </button>
@@ -187,32 +190,19 @@
                                         </div>
                                         <div class="clr"></div>
                                     </div>
-                                    <div
-                                        class="down col-sm-4 col-md-4 col-lg-4 col-xs-12"
-                                    >
-                                        <p>20/3/2021 - Lunch</p>
-                                    </div>
+
                                     <div class="clr"></div>
                                 </div>
-                                <div
-                                    class="order order col-sm-12 col-md-12 col-lg-12 col-xs-12"
-                                >
-                                    <div
-                                        class="top col-sm-12 col-md-12 col-lg-12 col-xs-12"
-                                    >
-                                        <div
-                                            class="f-l dish-name col-sm-3 col-md-3 col-lg-3 col-xs-3"
-                                        >
-                                            North Indian Veg
+                                <div class="order">
+                                    <div class="top">
+                                        <div class="f-l dish-name">
+                                            <p>North Indian Veg</p>
+                                            <p>20/3/2021 - Lunch</p>
                                         </div>
-                                        <div
-                                            class="f-l quantity col-sm-3 col-md-3 col-lg-3 col-xs-3"
-                                        >
-                                            20 Meals
+                                        <div class="f-l quantity">
+                                            <p>20 Meals</p>
                                         </div>
-                                        <div
-                                            class="f-l action-wrap col-sm-5 col-md-5 col-lg-5 col-xs-6"
-                                        >
+                                        <div class="f-l action-wrap">
                                             <button class="small-button">
                                                 Edit
                                             </button>
@@ -221,11 +211,6 @@
                                             </button>
                                         </div>
                                         <div class="clr"></div>
-                                    </div>
-                                    <div
-                                        class="down col-sm-4 col-md-4 col-lg-4 col-xs-12"
-                                    >
-                                        <p>20/3/2021 - Lunch</p>
                                     </div>
                                     <div class="clr"></div>
                                 </div>
@@ -236,123 +221,107 @@
                             <div class="new-order-act">
                                 <button class="med-button">New Order</button>
                             </div>
-                            <div
-                                class="new-order-wrap col-sm-12 col-md-12 col-lg-12 col-xs-12"
-                            >
-                                <div
-                                    class="date f-l col-sm-2 col-md-2 col-lg-2 col-xs-3"
-                                >
+                            <div class="new-order-wrap new-order-header">
+                                <div class="date f-l">Date</div>
+                                <div class="plan f-l">Plan</div>
+                                <div class="quantity f-l">Quantity</div>
+                                <div class="office-wrap f-l">Office</div>
+                                <div class="action f-l">Action</div>
+                                <div class="clr"></div>
+                            </div>
+                            <div class="new-order-wrap">
+                                <div class="date f-l">
                                     <input type="date" />
                                 </div>
-                                <div
-                                    class="plan f-l col-sm-4 col-md-4 col-lg-4 col-xs-6"
-                                >
+                                <div class="plan f-l">
                                     <input
                                         type="text"
                                         class="f-input-small"
                                         placeholder="Plan"
                                     />
+                                </div>
+                                <div class="quantity f-l">
                                     <input
                                         type="text"
                                         class="f-input-small"
                                         placeholder="Quantity"
                                     />
                                 </div>
-                                <div
-                                    class="office-wrap f-l col-sm-2 col-md-2 col-lg-2 col-xs-3"
-                                >
-                                    <select class="office-wrap small-select">
+                                <div class="office-wrap f-l">
+                                    <select class="small-select">
                                         <option>BTM</option>
                                         <option>BTM</option>
                                         <option>BTM</option>
                                         <option>BTM</option>
                                     </select>
                                 </div>
-                                <div
-                                    class="action f-l col-sm-2 col-md-2 col-lg-2 col-xs-3"
-                                >
+                                <div class="action f-l">
                                     <button class="small-button">
                                         Add to Order
                                     </button>
                                 </div>
                                 <div class="clr"></div>
                             </div>
-                            <div
-                                class="new-order-wrap col-sm-12 col-md-12 col-lg-12 col-xs-12"
-                            >
-                                <div
-                                    class="date f-l col-sm-2 col-md-2 col-lg-2 col-xs-3"
-                                >
+                            <div class="new-order-wrap">
+                                <div class="date f-l">
                                     <input type="date" />
                                 </div>
-                                <div
-                                    class="plan f-l col-sm-4 col-md-4 col-lg-4 col-xs-6"
-                                >
+                                <div class="plan f-l">
                                     <input
                                         type="text"
                                         class="f-input-small"
                                         placeholder="Plan"
                                     />
+                                </div>
+                                <div class="quantity f-l">
                                     <input
                                         type="text"
                                         class="f-input-small"
                                         placeholder="Quantity"
                                     />
                                 </div>
-                                <div
-                                    class="office-wrap f-l col-sm-2 col-md-2 col-lg-2 col-xs-3"
-                                >
-                                    <select class="office-wrap small-select">
+                                <div class="office-wrap f-l">
+                                    <select class="small-select">
                                         <option>BTM</option>
                                         <option>BTM</option>
                                         <option>BTM</option>
                                         <option>BTM</option>
                                     </select>
                                 </div>
-                                <div
-                                    class="action f-l col-sm-2 col-md-2 col-lg-2 col-xs-3"
-                                >
+                                <div class="action f-l">
                                     <button class="small-button">
                                         Add to Order
                                     </button>
                                 </div>
                                 <div class="clr"></div>
                             </div>
-                            <div
-                                class="new-order-wrap col-sm-12 col-md-12 col-lg-12 col-xs-12"
-                            >
-                                <div
-                                    class="date f-l col-sm-2 col-md-2 col-lg-2 col-xs-3"
-                                >
+                            <div class="new-order-wrap">
+                                <div class="date f-l">
                                     <input type="date" />
                                 </div>
-                                <div
-                                    class="plan f-l col-sm-4 col-md-4 col-lg-4 col-xs-6"
-                                >
+                                <div class="plan f-l">
                                     <input
                                         type="text"
                                         class="f-input-small"
                                         placeholder="Plan"
                                     />
+                                </div>
+                                <div class="quantity f-l">
                                     <input
                                         type="text"
                                         class="f-input-small"
                                         placeholder="Quantity"
                                     />
                                 </div>
-                                <div
-                                    class="office-wrap f-l col-sm-2 col-md-2 col-lg-2 col-xs-3"
-                                >
-                                    <select class="office-wrap small-select">
+                                <div class="office-wrap f-l">
+                                    <select class="small-select">
                                         <option>BTM</option>
                                         <option>BTM</option>
                                         <option>BTM</option>
                                         <option>BTM</option>
                                     </select>
                                 </div>
-                                <div
-                                    class="action f-l col-sm-2 col-md-2 col-lg-2 col-xs-3"
-                                >
+                                <div class="action f-l">
                                     <button class="small-button">
                                         Add to Order
                                     </button>
