--- a/adminPortal/index.html
+++ b/adminPortal/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./vendor/css/bootstrap.min.css" type="text/css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="./vendor/css/bootstrap.min.css"
+            type="text/css"
+        />
         <link rel="stylesheet" href="./css/index.css" type="text/css" />
-        <link rel="icon" href="./images/favicon.jpeg" type="image" sizes="16x16">
+        <link
+            rel="icon"
+            href="./images/favicon.jpeg"
+            type="image"
+            sizes="16x16"
+        />
         <script type="text/javascript" src="./vendor/js/jquery.js"></script>
         <script type="text/javascript" src="./vendor/js/popper.js"></script>
         <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
+        <script type="text/javascript" src="./js/dashboard.js"></script>
     </head>
     <body>
         <header>
             <div class="header-main-wrap">
                 <div class="header-left-wrap">
                     <div class="logo">
-                        <img class="img img-responsive" src="./images/logo.png" alt="logo" />
+                        <img
+                            class="img img-responsive"
+                            src="./images/logo.png"
+                            alt="logo"
+                        />
                     </div>
                 </div>
-                <div class="header-right-wrap ">
+                <div class="header-right-wrap">
                     <div class="sign-in">
                         <!-- <button class="small-button-transparent">Signin</button> -->
                     </div>
@@ -36,26 +50,71 @@
                         </div>
                         <div class="separator">or</div>
                         <div class="action">
-                            <input type="text" placeholder="Login By Mobile" class="f-input-large" />
-                            <button class="small-button">Go</button>
+                            <input
+                                type="text"
+                                placeholder="Login By Mobile"
+                                class="f-input-large"
+                            />
+                            <button class="small-button login-mobile">
+                                Go
+                            </button>
                         </div>
                         <div class="separator">or</div>
                         <div class="action">
-                            <input type="text" placeholder="Login By Email" class="f-input-large" />
+                            <input
+                                type="text"
+                                placeholder="Login By Email"
+                                class="f-input-large"
+                            />
                             <button class="small-button">Go</button>
                         </div>
                     </div>
                 </div>
-                <div class="container-right col-sm-5 col-md-5 col-xs-12">
-                    
+                <!-- <div class="container-right col-sm-5 col-md-5 col-xs-12">
                     <div class="otp-wrap">
-                        <input type="text" class="f-input-large" placeholder="Enter OTP" />
+                        <input
+                            type="text"
+                            class="f-input-large"
+                            placeholder="Enter OTP"
+                        />
                         <button class="small-button">Go</button>
                     </div>
-                </div>
+                </div> -->
                 <div class="clr"></div>
             </div>
         </section>
+        <div class="modal" tabindex="-1" role="dialog" id="otp-modal">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Enter OTP</h5>
+                        <button
+                            type="button"
+                            class="close"
+                            data-dismiss="modal"
+                            aria-label="Close"
+                        >
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="otp-wrap">
+                            <input
+                                type="text"
+                                class="f-input-large"
+                                placeholder="Enter OTP"
+                            />
+                            <button
+                                class="small-button login-mobile"
+                                data-dismiss="modal"
+                            >
+                                Go
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <footer>
             <div class="copyright">
                 <p>Copyright © 2021 - 2022 Sprink</p>
