--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -93,29 +93,47 @@
                         </div>
                         <div class="step">
                             <h3>Add User</h3>
-                            <div class="add-user">
-                                <input
-                                    type="text"
-                                    name="Name"
-                                    placeholder="Name"
-                                    class="f-input-medium"
-                                    value=""
-                                />
-                                <input
-                                    type="email"
-                                    name="Name"
-                                    placeholder="Email"
-                                    class="f-input-medium"
-                                    value=""
-                                />
-                                <input
-                                    type="text"
-                                    name="Name"
-                                    placeholder="Mobile"
-                                    class="f-input-medium"
-                                    value=""
-                                />
-                                <button class="small-button">Go</button>
+                            <div class="add-user-container">
+                                <div class="add-user-header">
+                                    <div class="item f-l">Name</div>
+                                    <div class="item f-l">Email</div>
+                                    <div class="item f-l">Mobile</div>
+                                    <div class="item f-l">Action</div>
+                                    <div class="clr"></div>
+                                </div>
+                                <div class="add-user">
+                                    <div class="item f-l">
+                                        <input
+                                            type="text"
+                                            name="user-name"
+                                            placeholder="Name"
+                                            class="f-input-medium"
+                                            value=""
+                                        />
+                                    </div>
+                                    <div class="item f-l">
+                                        <input
+                                            type="email"
+                                            name="user-email"
+                                            placeholder="Email"
+                                            class="f-input-medium"
+                                            value=""
+                                        />
+                                    </div>
+                                    <div class="item f-l">
+                                        <input
+                                            type="text"
+                                            name="user-mobile"
+                                            placeholder="Mobile"
+                                            class="f-input-medium"
+                                            value=""
+                                        />
+                                    </div>
+                                    <div class="item f-l">
+                                        <button class="small-button">Go</button>
+                                    </div>
+                                    <div class="clr"></div>
+                                </div>
                             </div>
                             <a href="#" class="add-rows">Add more Rows</a>
                         </div>
@@ -337,62 +355,25 @@
                         </div>
                         <div class="approve-wrap">
                             <div class="approve-header">
-                                <div
-                                    class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2"
-                                >
-                                    Name
-                                </div>
-                                <div
-                                    class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2"
-                                >
-                                    Email
-                                </div>
-                                <div
-                                    class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2"
-                                >
-                                    Phone
-                                </div>
-                                <div
-                                    class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2"
-                                >
-                                    Office
-                                </div>
-                                <div
-                                    class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-1"
-                                >
+                                <div class="item f-l">Name</div>
+                                <div class="item f-l">Email</div>
+                                <div class="item f-l">Phone</div>
+                                <div class="item f-l">Office</div>
+                                <div class="item-ch f-l">
                                     <input type="checkbox" />
                                 </div>
+                                <div class="item-bt f-l"></div>
                                 <div class="clr"></div>
                             </div>
                             <div class="approve-item">
-                                <div
-                                    class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2"
-                                >
-                                    Test
-                                </div>
-                                <div
-                                    class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2"
-                                >
-                                    Test
-                                </div>
-                                <div
-                                    class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2"
-                                >
-                                    Test
-                                </div>
-                                <div
-                                    class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2"
-                                >
-                                    Test
-                                </div>
-                                <div
-                                    class="item f-l col-sm-1 col-md-1 col-lg-1 col-xs-1"
-                                >
+                                <div class="item f-l">Test</div>
+                                <div class="item f-l">Test</div>
+                                <div class="item f-l">Test</div>
+                                <div class="item f-l">Test</div>
+                                <div class="item-ch f-l">
                                     <input type="checkbox" />
                                 </div>
-                                <div
-                                    class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-3"
-                                >
+                                <div class="item-bt f-l">
                                     <button class="small-button">
                                         Approve
                                     </button>
@@ -402,7 +383,9 @@
                         </div>
                         <div class="action-wrap-app">
                             <button class="small-button">Approve All</button>
-                            <button class="small-button">Reject All</button>
+                            <button class="small-button reject">
+                                Reject All
+                            </button>
                         </div>
                     </div>
                 </div>
