ordering flow-- work in progress

--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -156,19 +156,19 @@
                                 <div
                                     class="tile col-sm-2 col-md-2 col-lg-2 col-xs-4"
                                 >
-                                    <h3>Office 1</h3>
+                                    <h3>Office 2</h3>
                                     <p>bagmane tech park</p>
                                 </div>
                                 <div
                                     class="tile col-sm-2 col-md-2 col-lg-2 col-xs-4"
                                 >
-                                    <h3>Office 1</h3>
+                                    <h3>Office 3</h3>
                                     <p>bagmane tech park</p>
                                 </div>
                                 <div
                                     class="tile col-sm-2 col-md-2 col-lg-2 col-xs-4"
                                 >
-                                    <h3>Office 1</h3>
+                                    <h3>Office 4</h3>
                                     <p>bagmane tech park</p>
                                 </div>
                                 <div class="clr"></div>
@@ -192,17 +192,31 @@
                                 <div class="order">
                                     <div class="top">
                                         <div class="f-l dish-name">
-                                            <p>North Indian Veg</p>
+                                            <input
+                                                type="text"
+                                                class="f-input-small show-only"
+                                                value="North Indian Veg"
+                                                readonly
+                                            />
                                             <p>20/3/2021 - Lunch</p>
                                         </div>
                                         <div class="f-l quantity">
-                                            <p>20 Meals</p>
+                                            <input
+                                                type="text"
+                                                class="f-input-small show-only"
+                                                value="20 Meals"
+                                                readonly
+                                            />
                                         </div>
                                         <div class="f-l action-wrap">
-                                            <button class="small-button">
+                                            <button
+                                                class="small-button edit-order-meals"
+                                            >
                                                 Edit
                                             </button>
-                                            <button class="small-button">
+                                            <button
+                                                class="small-button delete-order-meals"
+                                            >
                                                 Delete
                                             </button>
                                         </div>
@@ -214,17 +228,31 @@
                                 <div class="order">
                                     <div class="top">
                                         <div class="f-l dish-name">
-                                            <p>North Indian Veg</p>
+                                            <input
+                                                type="text"
+                                                class="f-input-small show-only"
+                                                value="North Indian Veg"
+                                                readonly
+                                            />
                                             <p>20/3/2021 - Lunch</p>
                                         </div>
                                         <div class="f-l quantity">
-                                            <p>20 Meals</p>
+                                            <input
+                                                type="text"
+                                                class="f-input-small show-only"
+                                                value="20 Meals"
+                                                readonly
+                                            />
                                         </div>
                                         <div class="f-l action-wrap">
-                                            <button class="small-button">
+                                            <button
+                                                class="small-button edit-order-meals"
+                                            >
                                                 Edit
                                             </button>
-                                            <button class="small-button">
+                                            <button
+                                                class="small-button delete-order-meals"
+                                            >
                                                 Delete
                                             </button>
                                         </div>
