functionality related changes

--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -267,7 +267,7 @@
                             <div class="new-order-act">
                                 <button class="med-button">New Order</button>
                             </div>
-                            <div class="new-order-wrap new-order-header">
+                            <div class="new-order-header">
                                 <div class="date f-l">Date</div>
                                 <div class="plan f-l">Plan</div>
                                 <div class="quantity f-l">Quantity</div>
@@ -308,72 +308,7 @@
                                 </div>
                                 <div class="clr"></div>
                             </div>
-                            <div class="new-order-wrap">
-                                <div class="date f-l">
-                                    <input type="date" />
-                                </div>
-                                <div class="plan f-l">
-                                    <input
-                                        type="text"
-                                        class="f-input-small"
-                                        placeholder="Plan"
-                                    />
-                                </div>
-                                <div class="quantity f-l">
-                                    <input
-                                        type="text"
-                                        class="f-input-small"
-                                        placeholder="Quantity"
-                                    />
-                                </div>
-                                <div class="office-wrap f-l">
-                                    <select class="small-select">
-                                        <option>BTM</option>
-                                        <option>BTM</option>
-                                        <option>BTM</option>
-                                        <option>BTM</option>
-                                    </select>
-                                </div>
-                                <div class="action f-l">
-                                    <button class="small-button">
-                                        Add to Order
-                                    </button>
-                                </div>
-                                <div class="clr"></div>
-                            </div>
-                            <div class="new-order-wrap">
-                                <div class="date f-l">
-                                    <input type="date" />
-                                </div>
-                                <div class="plan f-l">
-                                    <input
-                                        type="text"
-                                        class="f-input-small"
-                                        placeholder="Plan"
-                                    />
-                                </div>
-                                <div class="quantity f-l">
-                                    <input
-                                        type="text"
-                                        class="f-input-small"
-                                        placeholder="Quantity"
-                                    />
-                                </div>
-                                <div class="office-wrap f-l">
-                                    <select class="small-select">
-                                        <option>BTM</option>
-                                        <option>BTM</option>
-                                        <option>BTM</option>
-                                        <option>BTM</option>
-                                    </select>
-                                </div>
-                                <div class="action f-l">
-                                    <button class="small-button">
-                                        Add to Order
-                                    </button>
-                                </div>
-                                <div class="clr"></div>
-                            </div>
+
                             <div class="clr"></div>
                         </div>
                     </div>
