push approve function

--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -337,7 +337,10 @@
                                     <input type="checkbox" />
                                 </div>
                                 <div class="item-bt f-l">
-                                    <button class="small-button">
+                                    <button
+                                        class="small-button approve-user-button"
+                                        data-user="{}"
+                                    >
                                         Approve
                                     </button>
                                 </div>
