approve all and reject all function added

--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -348,8 +348,12 @@
                             </div>
                         </div>
                         <div class="action-wrap-app">
-                            <button class="small-button">Approve All</button>
-                            <button class="small-button reject">
+                            <button class="small-button approve-all-users">
+                                Approve All
+                            </button>
+                            <button
+                                class="small-button reject reject-all-users"
+                            >
                                 Reject All
                             </button>
                         </div>
