modified login page: 1. Removed header 2. added logo in login box 3. used google logo 4. added background color and shadow to login box 5. modified shadow, color of button

--- a/adminPortal/index.html
+++ b/adminPortal/index.html
@@ -19,34 +19,27 @@
         <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
         <script type="text/javascript" src="./js/dashboard.js"></script>
     </head>
-    <body>
-        <header>
-            <div class="header-main-wrap">
-                <div class="header-left-wrap">
-                    <div class="logo">
-                        <img
-                            class="img img-responsive"
-                            src="./images/logo.png"
-                            alt="logo"
-                        />
-                    </div>
-                </div>
-                <div class="header-right-wrap">
-                    <div class="sign-in">
-                        <!-- <button class="small-button-transparent">Signin</button> -->
-                    </div>
-                </div>
-            </div>
-        </header>
+    <body>       
         <section>
             <div class="login-wrapper col-sm-8 col-md-8 col-xs-12">
                 <div class="container-left col-sm-6 col-md-6 col-xs-12">
-                    <div class="header">
-                        <h3>Login</h3>
+                    <div class="login-in-w">
+                        <div class="action">
+                            <img
+                                class="img img-responsive"
+                                src="./images/logo.png"
+                                alt="logo"
+                            />
+                        </div>
                     </div>
                     <div class="login-in-w">
                         <div class="action">
-                            <button class="med-button">Login By Google</button>
+                            <button class="med-button">
+                                <span>
+                                    <img src="https://www.iconfinder.com/data/icons/social-media-2210/24/Google-512.png"  class="google_button_style_img">
+                                </span>
+                                <span class="google_button_style_txt">Login By Google</span>
+                            </button>                        
                         </div>
                         <div class="separator">or</div>
                         <div class="action">
