--- a/adminPortal/index.html
+++ b/adminPortal/index.html
@@ -27,8 +27,9 @@
                         <div class="action">
                             <img
                                 class="img img-responsive"
-                                src="./images/logo.png"
+                                src="https://d3ljlx3hzhder.cloudfront.net/img/logo.png"
                                 alt="logo"
+                                width="150px"
                             />
                         </div>
                     </div>
