modified table style

--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -190,7 +190,7 @@
                                     </div>
                                 </div>
                                 <div class="order">
-                                    <div class="top">
+                                    <div class="odd">
                                         <div class="f-l dish-name">
                                             <input
                                                 type="text"
@@ -226,7 +226,7 @@
                                     <div class="clr"></div>
                                 </div>
                                 <div class="order">
-                                    <div class="top">
+                                    <div class="even">
                                         <div class="f-l dish-name">
                                             <input
                                                 type="text"
