--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -210,12 +210,12 @@
                                         </div>
                                         <div class="f-l action-wrap">
                                             <button
-                                                class="small-button edit-order-meals"
+                                                class="small-button edit-order-meals success"
                                             >
                                                 Edit
                                             </button>
                                             <button
-                                                class="small-button delete-order-meals"
+                                                class="small-button delete-order-meals failure"
                                             >
                                                 Delete
                                             </button>
@@ -246,12 +246,12 @@
                                         </div>
                                         <div class="f-l action-wrap">
                                             <button
-                                                class="small-button edit-order-meals"
+                                                class="small-button edit-order-meals success"
                                             >
                                                 Edit
                                             </button>
                                             <button
-                                                class="small-button delete-order-meals"
+                                                class="small-button delete-order-meals failure"
                                             >
                                                 Delete
                                             </button>
