--- a/adminPortal/index.html
+++ b/adminPortal/index.html
@@ -39,7 +39,7 @@
                                 <span>
                                     <img src="https://www.iconfinder.com/data/icons/social-media-2210/24/Google-512.png"  class="google_button_style_img">
                                 </span>
-                                <span class="google_button_style_txt">Login By Google</span>
+                                <span class="google_button_style_txt">Login with Google</span>
                             </button>                        
                         </div>
                         <div class="separator">or</div>
